--- a/SML/SML.Android/SML.Android.csproj
+++ b/SML/SML.Android/SML.Android.csproj
@@ -107,5 +107,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\logo_white_large.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\pin.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
